Proga/laba4_2/mod.h

#pragma once
#define Export __declspec(dllexport)

extern "C" {
	Export void* make();
	Export void clear(void* handle);
	Export void destroy(void* handle);

	Export int getSize(void* handle);
	Export bool isEmpty(void* handle);

	Export void pushFront(void* handle, int value);
	Export void pushBack(void* handle, int value);
	Export void fillRandom(void* handle, int value);

	Export int popFront(void* handle);
	Export int popBack(void* handle);
	
	Export int display(void* handle, int* buffer, int buffer_size);
}